The site now sends hedgehog hole updates

--- a/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.html
@@ -1,71 +1,94 @@
 <div class="hiddenElem" id="NooneNear">
-<div class="card">
-  <img class="leftImage" src="/assets/publicdomain_park.jpeg" alt="Park">
-  <div class="card-body">
-    <p class="Subheader">Work with Your Local Area!</p>
-    <p class="card-text">If you can convince your neighbours to make changes with you, you can create larger habitats for your local wildlife.</p>
+  <div class="card">
+    <img class="leftImage" src="/assets/publicdomain_park.jpeg" alt="Park" />
+    <div class="card-body">
+      <p class="Subheader">Work with Your Local Area!</p>
+      <p class="card-text">
+        If you can convince your neighbours to make changes with you, you can
+        create larger habitats for your local wildlife.
+      </p>
+    </div>
   </div>
-</div>
-<br>
+  <br />
 </div>
 
 <div class="hiddenElem" id="Inspiration">
-<div class="card">
-  <div class="card-body">
-    <p class="Subheader">Some Things People are Doing Near You!</p>
-    <p class="card-text">See what people in your local area have saved- by doing the same in your garden you 
-      may be able to support their work making your neighbourhood a thriving area for wildlife!</p>  
-    
-    <div class="cardElements">
-      <div class="hiddenElem" id="SingleAdvice0"> 
-        <div class="item">
-          <img src="{{displayArray[0].Pathname}}" alt="advice_image">
-          <p class="caption"> {{displayArray[0].Header}} </p>
-        </div>
-      </div>
+  <div class="card">
+    <div class="card-body">
+      <p class="Subheader">Some Things People are Doing Near You!</p>
+      <p class="card-text">
+        See what people in your local area have saved- by doing the same in your
+        garden you may be able to support their work making your neighbourhood a
+        thriving area for wildlife!
+      </p>
 
-      <div class="hiddenElem" id="SingleAdvice1"> 
-        <div class="item">
-          <img src="{{displayArray[1].Pathname}}" alt="advice_image">
-          <p class="caption"> {{displayArray[1].Header}} </p>
+      <div class="cardElements">
+        <div class="hiddenElem" id="SingleAdvice0">
+          <div class="item">
+            <img src="{{ displayArray[0].Pathname }}" alt="advice_image" />
+            <p class="caption">{{ displayArray[0].Header }}</p>
+          </div>
         </div>
-      </div>
 
-      <div class="hiddenElem" id="SingleAdvice2"> 
-        <div class="item">
-          <img src="{{displayArray[2].Pathname}}" alt="advice_image">
-          <p class="caption"> {{displayArray[2].Header}} </p>
+        <div class="hiddenElem" id="SingleAdvice1">
+          <div class="item">
+            <img src="{{ displayArray[1].Pathname }}" alt="advice_image" />
+            <p class="caption">{{ displayArray[1].Header }}</p>
+          </div>
+        </div>
+
+        <div class="hiddenElem" id="SingleAdvice2">
+          <div class="item">
+            <img src="{{ displayArray[2].Pathname }}" alt="advice_image" />
+            <p class="caption">{{ displayArray[2].Header }}</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<br>
+  <br />
 </div>
 
 <div class="hiddenElem" id="PondDistance">
   <div class="card">
     <!-- ************* need to credit this image somehow! -->
-    <img class="leftImage" src="/assets/advice_box_images/pond.jpeg" alt="Pond">
+    <img
+      class="leftImage"
+      src="/assets/advice_box_images/pond.jpeg"
+      alt="Pond"
+    />
     <div class="card-body">
-      <p class="Subheader">Someone within your local area has put in a pond! </p>
-      <p class="card-text">It's very helpful for aquatic animals if they can travel from one pond to another. It looks like someone 
-        in your neighbourhood had put in a pond. That means if you do the same thing, you could potentially help out local animals together!</p>
+      <p class="Subheader">Someone within your local area has put in a pond!</p>
+      <p class="card-text">
+        It's very helpful for aquatic animals if they can travel from one pond
+        to another. It looks like someone in your neighbourhood had put in a
+        pond. That means if you do the same thing, you could potentially help
+        out local animals together!
+      </p>
     </div>
   </div>
-  <br>
+  <br />
 </div>
 
 <div class="hiddenElem" id="HedgehogDistance">
   <div class="card">
     <!-- ************* need to credit this image somehow! -->
-    <img class="leftImage" src="/assets/advice_box_images/Erinaceus_europaeus.jpeg" alt="Hedgehog">
+    <img
+      class="leftImage"
+      src="/assets/advice_box_images/Erinaceus_europaeus.jpeg"
+      alt="Hedgehog"
+    />
     <div class="card-body">
-      <p class="Subheader">Someone within your local area has put in a hedgehog hole! </p>
-      <p class="card-text">Hedgehogs often get trapped in gardens because fences make it impossible for them to roam around. Our data suggests that someone 
-        in your neighbourhood had put in a hedgehog hole. That means if you do the same thing, you could potentially help out your local hedgehogs together!</p>
+      <p class="Subheader">
+        Someone within your local area has put in a hedgehog hole!
+      </p>
+      <p class="card-text">
+        Hedgehogs often get trapped in gardens because fences make it impossible
+        for them to roam around. Our data suggests that someone in your
+        neighbourhood had put in a hedgehog hole. That means if you do the same
+        thing, you could potentially help out your local hedgehogs together!
+      </p>
     </div>
   </div>
-  <br>
+  <br />
 </div>
-
