improvements to update email component

--- a/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/near-you-component/near-you-component.component.html
@@ -60,10 +60,11 @@
     <div class="card-body">
       <p class="Subheader">Someone within your local area has put in a pond!</p>
       <p class="card-text">
-        It's very helpful for aquatic animals if they can travel from one pond
-        to another. It looks like someone in your neighbourhood had put in a
-        pond. That means if you do the same thing, you could potentially help
-        out local animals together!
+        Being able to travel between garden ponds is great for aquatic animals 
+        because if they are able to get access to multiple ponds 
+        they are more able to build healthy populations. It looks like someone 
+        in your neighbourhood had put in a pond. That means if you do the same 
+        thing, you could potentially help out local animals together!
       </p>
     </div>
   </div>
