advice is now grouped with multiple animals

--- a/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
+++ b/src/app/pages/wildlife-advice-page/wildlife-layout/wildlife-layout.component.html
@@ -25,6 +25,12 @@
         <app-wildlife-advice-generic id="insectsAdviceID4" class="hiddenElem" [adviceGenericObject]="ourInsectsAdvice[4]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <app-wildlife-info-generic id="InsectInfoID2" class="hiddenElem" [infoGenericObject]="ourInsectsInfo[2]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-info-generic>
         <app-wildlife-advice-generic id="insectsAdviceID5" class="hiddenElem" [adviceGenericObject]="ourInsectsAdvice[5]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
+        <app-wildlife-advice-generic id="insectsAdviceID6" class="hiddenElem" [adviceGenericObject]="ourInsectsAdvice[6]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
+        <app-wildlife-advice-generic id="insectsAdviceID7" class="hiddenElem" [adviceGenericObject]="ourInsectsAdvice[7]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
+        <app-wildlife-advice-generic id="insectsAdviceID8" class="hiddenElem" [adviceGenericObject]="ourInsectsAdvice[8]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
+        <app-wildlife-advice-generic id="insectsAdviceID9" class="hiddenElem" [adviceGenericObject]="ourInsectsAdvice[9]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
+        <app-wildlife-advice-generic id="insectsAdviceID10" class="hiddenElem" [adviceGenericObject]="ourInsectsAdvice[10]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
+        <app-wildlife-advice-generic id="insectsAdviceID11" class="hiddenElem" [adviceGenericObject]="ourInsectsAdvice[11]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <button mat-stroked-button id="insectsButton" class="hiddenElem" color="primary" mat-button (click)="seeMoreInsect()">See more</button>
         <button mat-stroked-button id="insectsButtonLess" class="hiddenElem" color="primary" mat-button (click)="seeLessInsect()">See less</button>
       </div>
@@ -39,6 +45,8 @@
         <app-wildlife-advice-generic id="birdsAdviceID2" class="hiddenElem" [adviceGenericObject]="ourBirdsAdvice[2]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <app-wildlife-advice-generic id="birdsAdviceID3" class="hiddenElem" [adviceGenericObject]="ourBirdsAdvice[3]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <app-wildlife-info-generic id="BirdInfoID1" class="hiddenElem" [infoGenericObject]="ourBirdsInfo[1]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-info-generic>
+        <app-wildlife-advice-generic id="birdsAdviceID4" class="hiddenElem" [adviceGenericObject]="ourBirdsAdvice[4]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
+        <app-wildlife-advice-generic id="birdsAdviceID5" class="hiddenElem" [adviceGenericObject]="ourBirdsAdvice[5]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <button mat-stroked-button id="birdsButton" class="hiddenElem" color="primary" mat-button (click)="seeMoreBird()">See more</button>
         <button mat-stroked-button id="birdsButtonLess" class="hiddenElem" color="primary" mat-button (click)="seeLessBird()">See less</button>
       </div>
@@ -51,6 +59,7 @@
         <app-wildlife-advice-generic id="hedgehogAdviceID1" class="hiddenElem" [adviceGenericObject]="ourHedgehogAdvice[1]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <app-wildlife-info-generic id="HedgehogInfoID0" class="hiddenElem" [infoGenericObject]="ourHedgehogInfo[0]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-info-generic>
         <app-wildlife-advice-generic id="hedgehogAdviceID2" class="hiddenElem" [adviceGenericObject]="ourHedgehogAdvice[2]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
+        <app-wildlife-advice-generic id="hedgehogAdviceID3" class="hiddenElem" [adviceGenericObject]="ourHedgehogAdvice[3]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <button mat-stroked-button id="hedgehogButton" class="hiddenElem" color="primary" mat-button (click)="seeMoreHedgehog()">See more</button>
         <button mat-stroked-button id="hedgehogButtonLess" class="hiddenElem" color="primary" mat-button (click)="seeLessHedgehog()">See less</button>
       </div>
@@ -62,6 +71,7 @@
         <app-wildlife-advice-generic id="frogsAdviceID0" class="hiddenElem" [adviceGenericObject]="ourFrogsAdvice[0]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <app-wildlife-advice-generic id="frogsAdviceID1" class="hiddenElem" [adviceGenericObject]="ourFrogsAdvice[1]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <app-wildlife-advice-generic id="frogsAdviceID2" class="hiddenElem" [adviceGenericObject]="ourFrogsAdvice[2]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
+        <app-wildlife-advice-generic id="frogsAdviceID3" class="hiddenElem" [adviceGenericObject]="ourFrogsAdvice[3]" (newSaveEvent)="addAdvice($event)" (newRemoveEvent)="removeAdvice($event)"></app-wildlife-advice-generic>
         <button mat-stroked-button id="frogButton" class="hiddenElem" color="primary" mat-button (click)="seeMoreFrog()">See more</button>
         <button mat-stroked-button id="frogButtonLess" class="hiddenElem" color="primary" mat-button (click)="seeLessFrog()">See less</button>
       </div>
