Changing <a> links, adding wildlife advice intro

--- a/src/app/pages/about-page/about-main-text/about-main-text.component.html
+++ b/src/app/pages/about-page/about-main-text/about-main-text.component.html
@@ -6,7 +6,7 @@
   <div class="flex-container">
       <div>
         <img class="april-img" src="/assets/About_Img.png" alt="Web Designer Image" width=200px>
-        <p class="box-text">Rewild My Garden was created as part of a university project in Bristol. The site was designed and created by <a href="https://www.linkedin.com/in/april-bates-570b651bb/">April Bates</a>. The code for the website can be found <a href="https://github.com/A-Madeline-Bates/Rewild-My-Garden">here</a><br><br>
+        <p class="box-text">Rewild My Garden was created as part of a university project in Bristol. The site was designed and created by <a href="https://www.linkedin.com/in/april-bates-570b651bb/" target="_blank" rel="noopener noreferrer">April Bates</a>. The code for the website can be found <a href="https://github.com/A-Madeline-Bates/Rewild-My-Garden" target="_blank" rel="noopener noreferrer">here</a><br><br>
           If you notice an errors on the site or you would like to get in contact, please email us at RewildMyGarden@gmail.com.</p>
       </div>
   </div>
