--- a/src/app/pages/about-page/about-rewilding-text/about-rewilding-text.component.html
+++ b/src/app/pages/about-page/about-rewilding-text/about-rewilding-text.component.html
@@ -2,7 +2,7 @@
 <p>The term 'Rewilding' was coined in the 1990s to describe a wildlife conservation approach which aims to create and preserve 
     habitats which are self-sustaining. This means that they can thrive with little to no human intervention. Since then, 
     rewilding projects have been undertaken on a massive scale, including projects at <a href="https://y2y.net/">Yellowstone National Park</a> in the United States and 
-    the <a href="https://www.euronatur.org/en/what-we-do/european-green-belt">European Green Belt</a>.<br><br>
+    the <a href="https://www.euronatur.org/en/what-we-do/european-green-belt" target="_blank" rel="noopener noreferrer">European Green Belt</a>.<br><br>
 
     In recent years, the popular use of the term 'Rewilding' has expanded to wildlife conservation approaches which can be done by individuals abd which are 
     possible on smaller pieces of land. Small scale projects to promote wildlife require a different approach to very large scale projects. 
@@ -12,8 +12,8 @@
     That is why all the advice you will see on this site is about managing your land to benefit wildlife rather than leaving it alone.<br><br>
 
     <b>If you're interested in learning more about large-scale rewilding projects or donating money to support them, please follow the links below:</b><br>
-    <a href="https://www.rewildingbritain.org.uk/">Rewilding Britain</a> - A country-wide organisation in Britain focusing on rewilding.<br>
-    <a href="https://knepp.co.uk/home#">Knepp Wildland</a> - A pioneering rewilding project in West Sussex.
+    <a href="https://www.rewildingbritain.org.uk/" target="_blank" rel="noopener noreferrer">Rewilding Britain</a> - A country-wide organisation in Britain focusing on rewilding.<br>
+    <a href="https://knepp.co.uk/home#" target="_blank" rel="noopener noreferrer">Knepp Wildland</a> - A pioneering rewilding project in West Sussex.
 </p>
 </div>
 <br>
