--- a/src/app/pages/wildlife-advice-page/advice-response/pollinator-dialog/pollinator-dialog.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-response/pollinator-dialog/pollinator-dialog.component.html
@@ -21,8 +21,8 @@
         <p><b>Native :</b> {{data[0].Native}}</p>
     </div>
     <div>
-        <p class="CopyRightText">&copy; Data by <a href="https://pfaf.org/user/Default.aspx">"Plants For A Future"</a>, licensed under a Creative Commons Attribution 4.0 License.
-            <br>&copy; Image <a href="{{data[0].Link}}">"{{data[0].Name}}"</a> by {{data[0].Username}}, distributed under {{data[0].Copyright}} license.</p>
+        <p class="CopyRightText">&copy; Data by <a href="https://pfaf.org/user/Default.aspx" target="_blank" rel="noopener noreferrer">"Plants For A Future"</a>, licensed under a Creative Commons Attribution 4.0 License.
+            <br>&copy; Image <a href="{{data[0].Link}}" target="_blank" rel="noopener noreferrer">"{{data[0].Name}}"</a> by {{data[0].Username}}, distributed under {{data[0].Copyright}} license.</p>
     </div>
 </div>
 
@@ -48,7 +48,7 @@
         <p><b>Native :</b> {{extraFlowers.Native}}</p>
     </div>
     <div>
-        <p class="CopyRightText">&copy; Image <a href="{{extraFlowers.Link}}">"{{extraFlowers.Name}}"</a> by {{extraFlowers.Username}}, distributed under {{extraFlowers.Copyright}} license.</p>
+        <p class="CopyRightText">&copy; Image <a href="{{extraFlowers.Link}}" target="_blank" rel="noopener noreferrer">"{{extraFlowers.Name}}"</a> by {{extraFlowers.Username}}, distributed under {{extraFlowers.Copyright}} license.</p>
     </div>
 </div>
 <br>
