--- a/src/app/pages/about-page/about-resources-text/about-resources-text.component.html
+++ b/src/app/pages/about-page/about-resources-text/about-resources-text.component.html
@@ -2,17 +2,17 @@
 <p>If you are interested in anything you have seen on the site and would like to learn more, please have a look at the suggested links below:<br><br>
 
     <b>If you would like to find out more information about any of the plants recommended on the site:</b><br>
-    <a href="https://www.rhs.org.uk/plants/search-form">RHS Find a Plant</a> - Search by plant name, attribute or both to find plant details and a list of suppliers.<br>
-    <a href="https://pfaf.org/user/default.aspx">Plants for a Future</a> - A chairt which provides information on ecologically sustainable horticulture.<br><br>
+    <a href="https://www.rhs.org.uk/plants/search-form" target="_blank" rel="noopener noreferrer">RHS Find a Plant</a> - Search by plant name, attribute or both to find plant details and a list of suppliers.<br>
+    <a href="https://pfaf.org/user/default.aspx" target="_blank" rel="noopener noreferrer">Plants for a Future</a> - A chairt which provides information on ecologically sustainable horticulture.<br><br>
     
     <b>If you are interested in creating a more detailed pollinator calendar for your land:</b><br>
-    <a href="https://beekind.bumblebeeconservation.org/">Bee Kind</a> - Select the flowers you have in your garden to find out your bee kind score.<br><br>
+    <a href="https://beekind.bumblebeeconservation.org/" target="_blank" rel="noopener noreferrer">Bee Kind</a> - Select the flowers you have in your garden to find out your bee kind score.<br><br>
     
     <b>If you would like to find out more about wildlife projects near you:</b><br>
-    <a href="https://www.wildlifetrusts.org/wildlife-trusts">Find a Wildlife Trust</a> - The Wildlife Trusts is a movement made up of 46 Wildlife Trusts: independent charities with a shared mission.<br><br>
+    <a href="https://www.wildlifetrusts.org/wildlife-trusts" target="_blank" rel="noopener noreferrer">Find a Wildlife Trust</a> - The Wildlife Trusts is a movement made up of 46 Wildlife Trusts: independent charities with a shared mission.<br><br>
     
     <b>If you would like to explore further:</b><br>
-    <a href="https://www.rhs.org.uk/wildlife">RHS Wildlife Gardening</a> - See all of the RHS's Advice to create a thriving, wildlife-friendly garden.<br>
+    <a href="https://www.rhs.org.uk/wildlife" target="_blank" rel="noopener noreferrer">RHS Wildlife Gardening</a> - See all of the RHS's Advice to create a thriving, wildlife-friendly garden.<br>
     </p>
 </div>
 <br>
