Final changes that we have time to make currently

--- a/src/app/pages/about-page/about-main-text/about-main-text.component.html
+++ b/src/app/pages/about-page/about-main-text/about-main-text.component.html
@@ -10,6 +10,15 @@
           If you notice an errors on the site or you would like to get in contact, please email us at RewildMyGarden@gmail.com.</p>
       </div>
   </div>
+  <br>
+<p>&copy; April Bates<br></p>
+<p class="CopyRightText">This site makes use of :<br><br>
+Plants for a Future Database<br>
+Plants for a Future, Data, https://pfaf.org/user/Default.aspx, Creative Commons Attribution 4.0 License https://creativecommons.org/licenses/by-nc-sa/4.0/.<br><br>
+HadUK-Grid Gridded Climate Observations on a 5km grid over the UK, v1.0.3.0.<br>
+&copy; Met Office; Hollis, D.; McCarthy, M.; Kendon, M.; Legg, T.; Simpson, I. (2021): HadUK-Grid Gridded Climate Observations on a 5km grid over the UK, v1.0.3.0 (1862-2020). NERC EDS Centre for Environmental Data Analysis, 08 September 2021. doi:10.5285/f2da35c56afb4fa6aebf44094b65dff3. http://dx.doi.org/10.5285/f2da35c56afb4fa6aebf44094b65dff3<br><br>
+Ordnance Survey Names API<br>
+&copy; Ordnance Survey, OS Names API, https://osdatahub.os.uk/docs/names/overview, https://www.nationalarchives.gov.uk/doc/open-government-licence/version/2/</p>
 </div>
 <br>
 <br>
