--- a/src/app/pages/wildlife-advice-page/advice-questions/wildlife-multiplechoice/wildlife-multiplechoice.component.html
+++ b/src/app/pages/wildlife-advice-page/advice-questions/wildlife-multiplechoice/wildlife-multiplechoice.component.html
@@ -4,7 +4,7 @@
     <p><br> Fill in six questions about your garden and see personalised advice about how you can manage your space to
       benefit hedgehogs, insects, birds and amphibians. Whether you have a window box or a large garden and whether
       you own your garden or are renting, there are many things you can do to help local wildlife. <br><br>
-      Unfortunately you can currently only find advice for gardens in England, Scotland and Wales. 
+      Advice is only available for gardens in England, Scotland and Wales. 
     </p>
   </div>
 </div>
