--- a/src/app/pages/wildlife-advice-page/email-send/email-send.component.html
+++ b/src/app/pages/wildlife-advice-page/email-send/email-send.component.html
@@ -18,8 +18,8 @@
         <span class="altColour"
           >If you have advice emailed to you, we will save some of your
           information so that we can let users near you know if they can support
-          what you are doing to help local wildlife. Please have a look at our
-          <a routerLink="/privacy">privacy policy</a> to learn more.</span
+          what you are doing to help local wildlife. By clicking 'Send Email' 
+          you are agreeing to our <a routerLink="/privacy">privacy policy</a>.</span
         >
         We don't have a newsletter, so the only communication you will ever
         recieve from us is your wildlife advice and our local updates if you
