Changeing gdpr statement

--- a/src/app/pages/about-page/about-privacy-text/about-privacy-text.component.html
+++ b/src/app/pages/about-page/about-privacy-text/about-privacy-text.component.html
@@ -26,7 +26,7 @@
     •	Make recommendations to other site users about what people in their local area are doing to manage their gardens for wildlife.<br>
     •	Update you if more than two users close to you have put in a hedgehog hole.<br><br>
 <b>How do we store your data?</b><br>
-    Rewild My Garden securely stores your data at https://www.mongodb.com/. MongoDB provides various features, such as authentication, access control, encryption, to secure MongoDB deployments.<br>
+    Rewild My Garden securely stores your data at https://azure.microsoft.com/en-gb/services/cosmos-db/. CosmosDB provides various features, such as authentication, access control, encryption, to secure CosmosDB deployments.<br>
     Rewild My Garden will keep your email, saved advice and the longitude and latitude of your land for 2 years. Once this time period has expired, we will delete your data by erasing it from our database.<br><br>
 <b>Updates</b><br>
     Rewild My Garden would like to send you an update if two people close to your location have suggested that they have put in a hedgehog hole on their land.<br>
